test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/postfix_decr_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  extern
  void
  *
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  ++
  (
  *
  identifier(x)
  )
  --
  ;
  return
  const int(0)
  ;
  }
